# pipixia-doctor

./: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  RELEASE_NOTES.md  SKILL.md  install.sh  package.json  product_convergence.json  pyproject.toml  skill-check-report-20260724-221916.html  skill-report.html  技术报告_v1.0.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  compliance.yml  tests.yml
diagnostics/: __init__.py  agent_monitor.py  bridge_repair.py  callback_handler.py  legacy_recovery_plan.py  resurrection_bridge_repair.py
docs/: README.md
references/: detail.md
scripts/: cli.py  doctor.py  doctor.py.openbox-stub.bak  mem0_bridge.py  pipixia_api.py  pipixia_history_store.py  product_convergence_gate.py  setup.py  smoke.py
tests/: test_bridge_repair.py  test_cli.py  test_legacy_recovery_plan.py  test_one_click_open_box.py  test_resurrection_bridge_repair.py
